refactor(inversify-site): update intro docs to rely on code examples package

--- a/packages/docs/services/inversify-site/docs/intro.mdx
+++ b/packages/docs/services/inversify-site/docs/intro.mdx
@@ -1,8 +1,16 @@
 ---
 sidebar_position: 1
 ---
+import CodeBlock from '@theme/CodeBlock';
+import gettingStartedSource from '@inversifyjs/code-examples/generated/examples/gettingStarted.ts.txt';
 
 # Getting started
+
+Start by installing `inversify`:
+
+```bash
+npm install inversify reflect-metadata
+```
 
 Initialize your first container and add some bindings:
 
@@ -12,35 +20,7 @@ Initialize your first container and add some bindings:
 
 :::
 
-```ts
-import { Container, injectable, inject } from 'inversify';
-
-interface Weapon {
-  damage: number
-}
-
-@injectable()
-class Katana {
-  public readonly damage: number = 10;
-}
-
-@injectable()
-class Ninja {
-  constructor (
-    @inject(Katana)
-    public readonly weapon: Weapon
-  ) {}
-}
-
-const container: Container = new Container();
-
-container.bind(Ninja).toSelf();
-container.bind(Katana).toSelf();
-
-const ninja: Ninja = container.get(Ninja);
-
-console.log(ninja.weapon.damage); // Prints 10
-```
+<CodeBlock language="ts">{gettingStartedSource}</CodeBlock>
 
 `@injectable` allows both `Katana` and `Ninja` classes to be used as container bindings. `@inject` provides metadata with `Ninja` dependencies so the container is aware a `Katana` should be provided as the first argument of `Ninja`'s constructor.
 
