feat(inversify-site): add dependency inversion page

--- a/packages/docs/services/inversify-site/docs/introduction/getting-started.mdx
+++ b/packages/docs/services/inversify-site/docs/introduction/getting-started.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 1
+title: Getting started
 ---
 import CodeBlock from '@theme/CodeBlock';
 import gettingStartedSource from '@inversifyjs/code-examples/generated/examples/gettingStarted.ts.txt';
