feat(inversify-site): add decorator api docs page

--- a/packages/docs/services/inversify-site/docs/api/container.mdx
+++ b/packages/docs/services/inversify-site/docs/api/container.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 1
+sidebar_position: 2
 title: Container
 ---
 import containerApiGetAllSource from '@inversifyjs/code-examples/generated/examples/containerApiGetAll.ts.txt';
@@ -513,7 +513,7 @@ unloadAsync(...modules: interfaces.ContainerModuleBase[]): Promise<void>;
 
 Asynchronous version of unload. If any of the container modules's deactivations is asynchronous then this method should be used instead of `container.unload`.
 
-## parent;
+## parent
 
 ```ts
 parent: Container | null;
