feat(inversify-site): update pages to avoid linking to legacy docs

--- a/packages/docs/services/inversify-site/docs/fundamentals/lifecycle/activation.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/lifecycle/activation.mdx
@@ -13,6 +13,7 @@ There are multiple ways to provide an activation handler
 
 - Adding the handler to the [container](/docs/api/container#onactivation).
 - Adding the handler to the [binding](/docs/api/binding-syntax#onactivation).
+- Adding the handler to the class through the [postConstruct decorator](/docs/api/decorator#postconstruct).
 
-When multiple activation handlers are binded to a service identifier, the binding handler is called before any others. Then the container handlers are called, starting at the root container and descending the descendant containers stopping at the container with the binding.
+When multiple activation handlers are binded to a service identifier, the `postConstruct` handler is called before any others. After that, the binding handler is called. Then, container handlers are called, starting at the root container and descending the descendant containers stopping at the container with the binding.
 
