--- a/packages/docs/services/inversify-site/docs/fundamentals/di-hierarchy.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/di-hierarchy.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 2
 title: DI Hierarchy
 ---
-import diHierachySource from '@inversifyjs/code-examples/generated/examples/diHierachy.ts.txt';
+import diHierarchySource from '@inversifyjs/code-examples/generated/examples/diHierarchy.ts.txt';
 import CodeBlock from '@theme/CodeBlock';
 
 # DI Hierarchy
@@ -18,4 +18,4 @@ satisfy the request, it passes it along to its parent container. The requests ke
 bubbling up until we find an container that can handle the request or run out of container 
 ancestors.
 
-<CodeBlock language="ts">{diHierachySource}</CodeBlock>
+<CodeBlock language="ts">{diHierarchySource}</CodeBlock>
