feat(inversify-site): add middleware page

--- a/packages/docs/services/inversify-site/docs/api/container.mdx
+++ b/packages/docs/services/inversify-site/docs/api/container.mdx
@@ -91,7 +91,7 @@ Creates a new Container containing the bindings ( cloned bindings ) of two or mo
 applyCustomMetadataReader(metadataReader: interfaces.MetadataReader): void;
 ```
 
-Sets a custom metadata reader. See [middleware](https://github.com/inversify/InversifyJS/blob/master/wiki/middleware.md).
+Sets a custom metadata reader. See [middleware](/docs/fundamentals/lifecycle/middleware).
 
 ## applyMiddleware
 
@@ -99,7 +99,7 @@ Sets a custom metadata reader. See [middleware](https://github.com/inversify/Inv
 applyMiddleware(...middleware: interfaces.Middleware[]): void;
 ```
 
-An advanced feature that can be used for cross cutting concerns. See [middleware](https://github.com/inversify/InversifyJS/blob/master/wiki/middleware.md).
+An advanced feature that can be used for cross cutting concerns. See [middleware](/docs/fundamentals/lifecycle/middleware).
 
 ## bind
 
@@ -115,7 +115,7 @@ Sets a new binding.
 createChild(containerOptions?: interfaces.ContainerOptions): Container;
 ```
 
-Create a [container hierarchy](https://github.com/inversify/InversifyJS/blob/master/wiki/hierarchical_di.md). Parent `ContainerOptions` are provided by default.
+Create a [container hierarchy](/docs/fundamentals/di-hierarchy). Parent `ContainerOptions` are provided by default.
 
 ## get
 
