--- a/packages/docs/services/inversify-site/docs/fundamentals/inheritance.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/inheritance.mdx
@@ -14,17 +14,17 @@ Inheritance can be accomplished as long as constructor parameters are properly d
 ```ts
 @injectable()
 class Warrior {
-    public rank: string;
-    constructor(rank: string) { // args count  = 1
-        this.rank = rank;
-    }
+  public rank: string;
+  constructor(rank: string) { // args count  = 1
+    this.rank = rank;
+  }
 }
 
 @injectable()
 class SamuraiMaster extends Warrior {
-    constructor() { // args count = 0
-        super("master");
-    }
+  constructor() { // args count = 0
+    super("master");
+  }
 }
 ```
 
@@ -33,3 +33,20 @@ When trying to get a `SamuraiMaster`, the container throws an Error alerting the
 ## Using @unmanaged decorator
 
 The [unmanaged](/docs/api/decorator#unmanaged) decorator is a good way to tell inversify a base type constructor param is should not be managed. This is often the case when dealing with inheritance hierarchies in which only leaf types are injected.
+
+```ts
+@injectable()
+class Warrior {
+  public rank: string;
+  constructor(@unmanaged() rank: string) { // args count  = 0, unmanaged args are not included
+    this.rank = rank;
+  }
+}
+
+@injectable()
+class SamuraiMaster extends Warrior {
+  constructor() { // args count = 0
+    super("master");
+  }
+}
+```
