docs: update docs

--- a/packages/docs/services/inversify-site/docs/api/container.mdx
+++ b/packages/docs/services/inversify-site/docs/api/container.mdx
@@ -358,7 +358,7 @@ Adds a deactivation handler for a service identifier.
 restore(): void;
 ```
 
-Restore container state to last snapshot.
+Restore container state to last snapshot. Refer to the [docs](/docs/fundamentals/snapshot) for more information.
 
 ## snapshot
 
@@ -366,7 +366,7 @@ Restore container state to last snapshot.
 snapshot(): void;
 ```
 
-Save the state of the container to be later restored with the restore method.
+Save the state of the container to be later restored with the restore method. Refer to the [docs](/docs/fundamentals/snapshot) for more information.
 
 ## tryGet
 
