--- a/packages/docs/services/inversify-site/docs/fundamentals/di-hierarchy.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/di-hierarchy.mdx
@@ -6,16 +6,12 @@ import diHierarchySource from '@inversifyjs/code-examples/generated/examples/diH
 import CodeBlock from '@theme/CodeBlock';
 
 # DI Hierarchy
-Some applications use a  hierarchical dependency injection (DI) system.
-For example, Angular applications use its own [hierarchical DI system](https://angular.dev/guide/di/hierarchical-dependency-injection).
+InversifyJS is a popular library for implementing inversion of control (IoC) and dependency injection (DI) in TypeScript applications. It also supports hierarchical dependency injection, which can be a powerful tool in complex applications.
 
-In a hierarchical DI system, a container can have a parent container and multiple containers can be used in one application. The containers form a hierarchical structure.
+With InversifyJS hierarchical injection system, you can create a hierarchy of containers where each container can have a parent container. This allows for better organization and separation of concerns in your application.
 
-When a container at the bottom of the hierarchical structure requests a dependency, 
-the container tries to satisfy that dependency with it's own bindings. If the container 
-lacks bindings, it passes the request up to its parent container. If that container can't 
-satisfy the request, it passes it along to its parent container. The requests keep 
-bubbling up until we find an container that can handle the request or run out of container 
-ancestors.
+When a dependency needs to be injected, InversifyJS starts by looking in the current container for a binding. If the binding is not found, it moves up the hierarchy to the parent container and continues the search. This process continues until the dependency is resolved or the top-level parent container is reached.
+
+By using InversifyJS hierarchical injection system, you can easily manage complex dependencies and keep your code clean and modular. It provides a flexible and scalable solution for handling dependencies in your TypeScript applications.
 
 <CodeBlock language="ts">{diHierarchySource}</CodeBlock>
