docs(inversify-site): update docs

--- a/packages/docs/services/inversify-site/docs/fundamentals/binding.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/binding.mdx
@@ -47,4 +47,4 @@ Specifies whether the binding is used to provide a resolved value for the given 
 
 ### Lifecycle handlers
 
-Handlers that are called after a resolved value is provided or a singleton-scoped binding is deactivated.
+Handlers that are called after a resolved value is provided or a singleton-scoped binding is deactivated. Refer to the [API docs](/docs/api/binding-syntax#bindingonsyntax) for more information.
