--- a/packages/docs/services/inversify-site/docs/fundamentals/lifecycle/deactivation.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/lifecycle/deactivation.mdx
@@ -5,7 +5,7 @@ title: Deactivation
 import containerApiOnDeactivationSource from '@inversifyjs/code-examples/generated/examples/containerApiOnDeactivation.ts.txt';
 import CodeBlock from '@theme/CodeBlock';
 
-Whenever a service is unbound, the deactivation event is dispatched. A deactivation handler receives a resolved value and returns nothing.
+Whenever a singleton scoped service is unbound, the deactivation event is dispatched. A deactivation handler receives a resolved value and returns nothing.
 
 <CodeBlock language="ts">{containerApiOnDeactivationSource}</CodeBlock>
 
